Don't install libio.h or _G_config.h.
This is an experimental patch which removes libio.h (and _G_config.h)
from the set of application-exposed headers.  After this change, the
public stdio.h does not define any symbols whose names begin with _G_
nor _IO_, except that when optimizing, the guts of struct _IO_FILE and
three of the flag constants are visible (see bits/stdio.h and
bits/types/FILE_internals.h).  There is a small amount of code
duplication in bits/stdio.h, of macro bodies from libio.h that are no
longer available.  A number of internal .c files that were manually
doing PLT bypass for flockfile/funlockfile can now rely on
include/stdio.h to do it for them.

It passes the testsuite on x86_64-linux, but it needs a great deal of
additional testing; in particular I'm almost certain I broke the
support for old-format (GLIBC_2.0) struct _IO_FILE, which is
configured out on this target.  Testing this properly would require
someone to get their hands on _really_ old binaries, compiled against
glibc 2.0, possibly statically-linked-but-using-NSS.  Unfortunately,
libc.so cannot be expected to be binary identical.

However, this should be ready to feed into archive rebuilds to find
out what applications break.

Substantial clean-ups to the libio implementation are possible if this
sticks, but I haven't done 'em; this is intended to be minimal.

	* libio/Makefile: Don't install libio.h or _G_config.h.  Do install
	bits/types/FILE_internals.h, bits/types/cookie_io_functions_t.h,
	and bits/types/__fpos_t.h.

	* libio/stdio.h: Don't include libio.h.  Get __gnuc_va_list
	directly from stdarg.h, __fpos_t and __fpos64_t from
	bits/types/__fpos_t.h, and the cookie types from
	bits/types/cookie_io_functions_t.h.  Change all uses of
	_G_va_list, _G_fpos_t, _G_fpos64_t, _IO_FILE,
	_IO_cookie_io_functions_t, and _IO_ssize_t to __gnuc_va_list,
	__fpos_t, __fpos64_t, FILE, cookie_io_functions_t, and __ssize_t
	respectively.
	Do not define getc nor putc as macros.
	Define BUFSIZ as 

--- a/sysdeps/ieee754/ldbl-opt/Makefile
+++ b/sysdeps/ieee754/ldbl-opt/Makefile
@@ -11,7 +11,7 @@ libm-routines += s_nexttowardfd
 routines += math_ldbl_opt nldbl-compat
 
 extra-libs += libnldbl
-libnldbl-calls = asprintf dprintf fprintf fscanf fwprintf fwscanf iovfscanf \
+libnldbl-calls = asprintf dprintf fprintf fscanf fwprintf fwscanf \
 		 obstack_printf obstack_vprintf printf scanf snprintf \
 		 sprintf sscanf swprintf swscanf vasprintf vdprintf vfprintf \
 		 vfscanf vfwprintf vfwscanf vprintf vscanf vsnprintf \
